--- a/client/package.json
+++ b/client/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "proxy": "http://localhost:3001",
   "dependencies": {
-    "@material-ui/core": "^4.1.1",
     "axios": "^0.19.0",
+    "pondjs": "^0.8.10",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "react-timeseries-charts": "^0.16.1"
   },
   "scripts": {
     "start": "react-scripts start",
