--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "proxy": "http://localhost:3001",
   "dependencies": {
+    "ag-grid-community": "^21.0.1",
+    "ag-grid-react": "^21.0.1",
     "axios": "^0.19.0",
     "pondjs": "^0.8.10",
     "react": "^16.8.6",
